--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
         <title>Monkaa: Watch and Download the animated short film</title>
         <meta name="description" content="Monkaa is a blue-furred, pink-faced monkey who consumes a crystallized meteorite, making him invincibly strong and too hot to handle. Watch and download the animated short film here--for free!">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- TODO: Make a favicon that better represents the page. -->
-        <link rel="shortcut icon" href="favicon.ico">
+        <link rel="shortcut icon" href="monkaa.ico">
         <link rel="stylesheet" href="css/main.css">
     </head>
 
@@ -34,39 +33,36 @@
         </header>
 
         <aside id="social">
-            <!-- TODO: Experiment with different ways of making this set of
-                 share links stand out and stay near the user all the time.
-                 Try using 'absolute', 'fixed', or even 'sticky' positioning
-                 to achieve a user-friendly effect. You may also use the
-                 `:hover` pseudoselector to trigger height or width changes
-                 that could help you make a more interactive design. -->
             <h2>Share</h2>
             <ul class="social-links">
-                <li class="twitter"><a href="http://twitter.com">Twitter</a></li>
-                <li class="facebook"><a href="http://facebook.com">Facebook</a></li>
-                <li class="instagram"><a href="http://instagram.com">Instagram</a></li>
+                <li class="twitter"><a href="http://twitter.com"><img src="../social/glyphicons-social-32-twitter.png" alt="Twitter Icon"/></a></li>
+                <li class="facebook"><a href="http://facebook.com"><img src="../social/glyphicons-social-31-facebook.png" alt="Facebook Icon"/></a></li>
+                <li class="instagram"><a href="http://instagram.com"><img src="../social/glyphicons-social-33-instagram.png" alt="Instagram Icon"/></a></li>
             </ul>
         </aside>
 
         <section id="watch">
             <h2>Watch</h2>
-            <!-- TODO: Embed the .webm and .mp4 video with full controls for a
-                 convenient and attractive video viewing experience. -->
+           <video  width="600" height="540" controls>
+            <source src="media/video/monkaa.mp4" type="video/mp4">
+            <source src="media/video/monkaa_1080p.webm" type="video/webm">
+          </video>
 
             <!-- TODO: Style an elegant download link to download the video. -->
             <h3>Download the video</h3>
             <p>
                 Click below to download either MP4 or WEBM versions of this video.
                 <br>
-                <a class="download-button" href="media/video/monkaa_1080p.mp4">.MP4 Version</a>
+                <a class="download-button" href="media/video/monkaa.mp4">.MP4 Version</a>
                 <a class="download-button" href="media/video/monkaa_1080p.webm">.WEBM Version</a>
             </p>
         </section>
 
         <section id="listen">
             <h2>Listen</h2>
-            <!-- TODO: Embed an audio player so users can play back the
-                 soundtrack MP3 directly on the page. -->
+            <audio controls>
+              <source src="media/audio/monkaa_soundtrack.mp3" type="audio/mpeg">
+            </audio>
 
             <!-- TODO: Style an elegant download link to download the video. -->
             <p>
@@ -82,21 +78,19 @@
             <p class="lead">Monkaa is a blue-furred, pink-faced monkey who consumes a crystallized meteorite, making him invincibly strong and too hot to handle. Exploring his new superpowers, Monkaa zooms through an entire universe. </p>
 
             <ul class="weybec-people">
-                <!-- TODO: You must choose the proper image format to use for
-                     each headshot below. Images are located in the
-                     ``img/weybec/`` directory. -->
+              
                 <li>
-                    <img class="headshot" src="TODO" alt="Pratik Solanki headshot"><br>
+                    <img class="headshot" src="img/weybec/pratik_solanki.jpg" alt="Pratik Solanki headshot" height="190" width="175"><br>
                     Pratik Solanki<br>
                     Co-Founder
                 </li>
                 <li>
-                    <img class="headshot" src="TODO" alt="Nita Ravalji headshot"><br>
+                    <img class="headshot" src="img/weybec/Nita-ravalji1.jpg" alt="Nita Ravaji headshot" height="190" width="175"><br>
                     Nita Ravalji<br>
                     Co-Founder
                 </li>
                 <li>
-                    <img class="headshot" src="TODO" alt="Niyal Parmar headshot"><br>
+                    <img class="headshot" src="img/weybec/niyal_parmar.jpg" alt="Niyal Parmar headshot" height="190" width="175"><br>
                     Niyal Parmar<br>
                     Co-Founder
                 </li>
@@ -108,7 +102,7 @@
         </section>
 
         <footer><!-- TODO: Style the footer appropriately. -->
-            <p>This page was created and designed by WEBDEV BEV in 2015. <i>Monkaa</i> was created by <a href="http://www.weybec.com/">Weybec</a> and is used here under a CC-BY license.</p>
+            <p>This page was created and designed by Carly Darcher 2017. <i>Monkaa</i> was created by <a href="http://www.weybec.com/">Weybec</a> and is used here under a CC-BY license.</p>
             <nav>
                 <ul class="main-nav">
                     <li><a href="#watch">Watch</a></li>
