--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         <aside id="social">
             <h2>Share</h2>
             <ul class="social-links">
-                <li class="twitter"><a href="http://twitter.com"><img src="/social/glyphicons-social-32-twitter.png" alt="Twitter Icon"/></a></li>
-                <li class="facebook"><a href="http://facebook.com"><img src="/social/glyphicons-social-31-facebook.png" alt="Facebook Icon"/></a></li>
-                <li class="instagram"><a href="http://instagram.com"><img src="/social/glyphicons-social-33-instagram.png" alt="Instagram Icon"/></a></li>
+                <li class="twitter"><a href="http://twitter.com"><img src="../social/glyphicons-social-32-twitter.png" alt="Twitter Icon"/></a></li>
+                <li class="facebook"><a href="http://facebook.com"><img src="../social/glyphicons-social-31-facebook.png" alt="Facebook Icon"/></a></li>
+                <li class="instagram"><a href="http://instagram.com"><img src="../social/glyphicons-social-33-instagram.png" alt="Instagram Icon"/></a></li>
             </ul>
         </aside>
         <section id="about">
@@ -49,8 +49,8 @@
             <p>
                 Click below to download either MP4 or WEBM versions of this video.
                 <br>
-                <a href="media/video/monkaa.mp4"><i class="fa fa-download" aria-hidden="true"></i><img src="/buttons/button_download-mp4.png" alt="download mp4 Icon"/></a></li>
-                <a href="media/video/monkaa_1080p.webm"><i class="fa fa-download" aria-hidden="true"></i><img src="/buttons/button_download-webm.png" alt="download webm Icon"/></a></li>
+                <a href="media/video/monkaa.mp4"><i class="fa fa-download" aria-hidden="true"></i><img src="../buttons/button_download-mp4.png" alt="download mp4 Icon"/></a></li>
+                <a href="media/video/monkaa_1080p.webm"><i class="fa fa-download" aria-hidden="true"></i><img src="../buttons/button_download-webm.png" alt="download webm Icon"/></a></li>
             </p>
         </section>
 
@@ -60,7 +60,7 @@
               <source src="media/audio/monkaa_soundtrack.mp3" type="audio/mpeg">
             </audio>
             <p>
-                <a href="media/audio/monkaa_soundtrack.mp3"></a><i class="fa fa-download" aria-hidden="true"></i><img src="/buttons/button_download-mp3.png" alt="download mp3 Icon"/></a></li>
+                <a href="media/audio/monkaa_soundtrack.mp3"></a><i class="fa fa-download" aria-hidden="true"></i><img src="../buttons/button_download-mp3.png" alt="download mp3 Icon"/></a></li>
             </p>
         </section>
         <section id="weybec">
