--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               <source src="media/audio/monkaa_soundtrack.mp3" type="audio/mpeg">
             </audio>
             <p>
-                <a href="media/audio/monkaa_soundtrack.mp3"></a><i class="fa fa-download" aria-hidden="true"></i><img src="buttons/button_download-mp3.png" alt="download mp3 Icon"/></a></li>
+                <a href="media/audio/monkaa_soundtrack.mp3"><i class="fa fa-download" aria-hidden="true"></i><img src="buttons/button_download-mp3.png" alt="download mp3 Icon"/></a></li>
             </p>
         </section>
         <section id="weybec">
